second part of the home

--- a/homepage.html
+++ b/homepage.html
@@ -19,10 +19,10 @@
     <title>Homepage</title>
 </head>
 
-<body class="bg-light">
+<body class="background-color= rgb(246 248 255 / var(--tw-bg-opacity))">
     <header>
         <!--navigation bar-->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" style="background-color: rgb(249, 249, 249);">
           <div class="container">
             <a class="navbar-brand" href="#">
               <img src="./logo borox.png" alt="Logo" width="90" height="24" class="d-inline-block align-text-top">
@@ -68,9 +68,9 @@
           <div class="txt-container">
           <span style="color:#7963e0; font-weight: bold; font-size: larger;">Hello, My name is</span>
           <br>
-          <h1 class="isa-style">Isabelle Ryal</h1>
-          <h3 class="isa-style" style="font-size: medium;">I'm A Web developer</h3>
-          <p class="text-wrap" style="line-height: 1.5; color: light;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et delectus tempore ad, dolor rerum voluptates nulla labore enim numquam alias.</p>
+          <h1 class="isa-style" style="font-size: 50px;">Isabelle Ryal</h1>
+          <h2 class="isa-style" style="font-size: large; line-height: 1.5;">I'm A Web developer</h2>
+          <p class="text-wrap" style="line-height: 1.5; color: light; opacity: 0.5;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et delectus tempore ad, dolor rerum voluptates nulla labore enim numquam alias.</p>
           <button type="button" class="btn btn-custom">Hire Me</button>
         </div>
           <div class="img-container">
@@ -78,10 +78,56 @@
           </div>
         </div>
         <br>
+
+        <!-- the second part of the homepage -->
+        <!-- headings -->
         <section>
           <div class="container">
-            <span id="#mont">BEST IN SERVICE</span>
-            <h2>IT Industries we're offering</h2>
+            <h6 class="mont" style="text-align: center;">BEST IN SERVICE</h6>
+            <h2 style="text-align: center; font-size: 30px;" class="isa-style">IT Industries we're <span style="color: #7963e0;" class="isa-style">offering</span></h2> 
+
+            <!-- box elements -->
+            <div class="section">
+              <div class="num">01</div>
+              <div class="box">
+                <img src="./graphic icon 1.png" alt="">
+                  <div style="margin-top: 20px;">
+                  <h2 class="isa-style" style="font-size: 20px;">Graphics design</h2>
+                  <p class="mont" style="font-size: 15px;">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+                  </div>
+              </div>
+          
+              <div class="num">02</div>
+              <div class="box">
+                  <img src="./mancom icon 2.png" alt="">
+                  <div style="margin-top: 10px;">
+                  <h2 class="isa-style" style="font-size: 20px;">Devlopment</h2>
+                  <p class="mont" style="font-size: 15px;">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+                  </div>
+              </div>
+          
+              <div class="num">03</div>
+              <div class="box">
+                 <img src="./seo icon 3.png" alt="">
+                  <div style="margin-top: 10px;">
+                  <h2 class="isa-style" style="font-size: 20px;">SEO Friendly</h2>
+                  <p class="mont" style="font-size: 15px;">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+                  </div>
+              </div>
+          </div>
+
+          </div>
+        </section>
+        <br>
+        <section>
+          <div class="container">
+          <!-- <div class="txt-img-container"> -->
+            <div class="people">
+              <img src="./people.jpg" class="girl" alt="">
+            </div>
+          </div>
+
+            </div>
 
           </div>
         </section>
