responsiveness for 1020px until contact us
latest news is skipped as it is not completed

--- a/homepage.html
+++ b/homepage.html
@@ -184,61 +184,65 @@
     <!-- right part -->
     <div class="container custom-flex" id="experience" style="padding-bottom: 30px;">
       <!-- part right -->
-      <h2 class="isa-style" style="font-size: large;">Education</h2> <br>
-      <div class="dived">
-        <div class="card round">
-          <div class="card-body">
-            <span class="mont eduheadsm">June 15, 2013 - 2016</span>
-            <h4 class="eduhead isa-style">Master in Computer Engineering <span> - First Class</span></h4>
-            <p class="mont edup">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia sequi doloremque ullam placeat quos provident ex fuga. Ratione ab explicabo doloribus error odio veritatis tenetur.</p>
+      <div>
+        <h2 class="isa-style" style="font-size: large;">Education</h2> <br>
+        <div class="dived">
+          <!-- <img src="./arrow.png" alt="" class=""> -->
+          <div class="card round">
+            <div class="card-body">
+              <span class="mont eduheadsm">June 15, 2013 - 2016</span>
+              <h4 class="eduhead isa-style">Master in Computer Engineering <span> - First Class</span></h4>
+              <p class="mont edup">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia sequi doloremque ullam placeat quos provident ex fuga. Ratione ab explicabo doloribus error odio veritatis tenetur.</p>
+            </div>
           </div>
-        </div>
-        <br>
-        <div class="card round">
-          <div class="card-body">
-            <span class="mont eduheadsm">June 12, 2010 - 2013</span>
-            <h4 class="eduhead isa-style">Bachelor in Computer Engineering <span> - First Class</span></h4>
-            <p class="mont edup">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia sequi doloremque ullam placeat quos provident ex fuga. Ratione ab explicabo doloribus error odio veritatis tenetur.</p>
+          <br>
+          <div class="card round">
+            <div class="card-body">
+              <span class="mont eduheadsm">June 12, 2010 - 2013</span>
+              <h4 class="eduhead isa-style">Bachelor in Computer Engineering <span> - First Class</span></h4>
+              <p class="mont edup">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia sequi doloremque ullam placeat quos provident ex fuga. Ratione ab explicabo doloribus error odio veritatis tenetur.</p>
+            </div>
           </div>
-        </div>
-        <br>
-        <div class="card round">
-          <div class="card-body">
-            <span class="mont eduheadsm">June 1, 2009 - 2010</span>
-            <h4 class="eduhead isa-style">Higher Secondary <span> - (A+)</span></h4>
-            <p class="mont edup">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia sequi doloremque ullam placeat quos provident ex fuga. Ratione ab explicabo doloribus error odio veritatis tenetur.</p>
+          <br>
+          <div class="card round">
+            <div class="card-body">
+              <span class="mont eduheadsm">June 1, 2009 - 2010</span>
+              <h4 class="eduhead isa-style">Higher Secondary <span> - (A+)</span></h4>
+              <p class="mont edup">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia sequi doloremque ullam placeat quos provident ex fuga. Ratione ab explicabo doloribus error odio veritatis tenetur.</p>
+            </div>
           </div>
         </div>
       </div>
 
       <br>
       <!-- part left -->
+      <div>
       <h2 class="isa-style" style="font-size: large;">Experience</h2> <br>
-      <div class="dived">
-        <div class="card round">
-          <div class="card-body">
-            <span class="mont eduheadsm">March 12, 2020</span>
-            <h4 class="eduhead isa-style">Envato  <span>- Team Leader</span></h4>
-            <p class="mont edup">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia sequi doloremque ullam placeat quos provident ex fuga. Ratione ab explicabo doloribus error odio veritatis tenetur.</p>
+        <div class="dived">
+          <div class="card round">
+            <div class="card-body">
+              <span class="mont eduheadsm">March 12, 2020</span>
+              <h4 class="eduhead isa-style">Envato  <span>- Team Leader</span></h4>
+              <p class="mont edup">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia sequi doloremque ullam placeat quos provident ex fuga. Ratione ab explicabo doloribus error odio veritatis tenetur.</p>
+            </div>
+          </div>
+          <br>
+          <div class="card round">
+            <div class="card-body">
+              <span class="mont eduheadsm">July 23, 2016 - 2018</span>
+              <h4 class="eduhead isa-style">Twitter Company <span> - Jr. Developer</span></h4>
+              <p class="mont edup">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia sequi doloremque ullam placeat quos provident ex fuga. Ratione ab explicabo doloribus error odio veritatis tenetur.</p>
+            </div>
+          </div>
+          <br>
+          <div class="card round">
+            <div class="card-body">
+              <span class="mont eduheadsm">June 15, 2013 - 2016</span>
+              <h4 class="eduhead isa-style">Master in Computer Engineering <span> - First Class</span></h4>
+              <p class="mont edup">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia sequi doloremque ullam placeat quos provident ex fuga. Ratione ab explicabo doloribus error odio veritatis tenetur.</p>
+            </div>
           </div>
         </div>
-        <br>
-        <div class="card round">
-          <div class="card-body">
-            <span class="mont eduheadsm">July 23, 2016 - 2018</span>
-            <h4 class="eduhead isa-style">Twitter Company <span> - Jr. Developer</span></h4>
-            <p class="mont edup">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia sequi doloremque ullam placeat quos provident ex fuga. Ratione ab explicabo doloribus error odio veritatis tenetur.</p>
-          </div>
-        </div>
-        <br>
-        <div class="card round">
-          <div class="card-body">
-            <span class="mont eduheadsm">June 15, 2013 - 2016</span>
-            <h4 class="eduhead isa-style">Master in Computer Engineering <span> - First Class</span></h4>
-            <p class="mont edup">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia sequi doloremque ullam placeat quos provident ex fuga. Ratione ab explicabo doloribus error odio veritatis tenetur.</p>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 </section>
@@ -248,7 +252,7 @@
 <div class="container" id="portfolio" style="margin-top: 40px;">
   <span class="center-container mont edup" style="font-size: 14px;">PORTFOLIO</span>
   <h2 class="isa-style" style="text-align: center;">My <span class="isa-style" style="color: #7963e0;">PORTFOLIO</span></h2>
-
+  
   <!-- list of nav -->
   <ul class="hori-ul">
     <li class="hori-li hori-li:hover">All</li>
@@ -259,24 +263,24 @@
   </ul>
 
   <!-- the card grid -->
-  <div class="container custom-flex">
-    <div class="card text-bg-dark custom-card2">
-      <img src="./img-1.jpg" class="card-img rounded-image" alt="...">
+  <div class="container custom-flex" id="port">
+    <div class="card card2 text-bg-dark custom-card2" id="crd">
+      <img src="./img-1.jpg" class="card2-img rounded-image" alt="...">
       <div class="card-img-overlay end-container">
         <span class="super mont">3D Graphics</span>
         <span class="super mont">Templates</span>
       </div>
     </div>
 
-    <div class="card text-bg-dark custom-card2">
-      <img src="./img-2.jpg" class="card-img rounded-image" alt="...">
+    <div class="card card2 text-bg-dark custom-card2" id="crd">
+      <img src="./img-2.jpg" class="card2-img rounded-image" alt="...">
       <div class="card-img-overlay end-container">
         <span class="super mont">Web Design</span>
       </div>
     </div>
 
-    <div class="card text-bg-dark custom-card2">
-      <img src="./img-3.jpg" class="card-img rounded-image" alt="...">
+    <div class="card card2 text-bg-dark custom-card2" id="crd">
+      <img src="./img-3.jpg" class="card2-img rounded-image" alt="...">
       <div class="card-img-overlay end-container">
         <span class="super mont">Web Design</span>
       </div>
@@ -284,24 +288,24 @@
   </div>
 </div>
 
-<div class="container custom-flex" style="margin-bottom: 40px;">
-  <div class="card text-bg-dark custom-card2">
-    <img src="./img-4.jpg" class="card-img rounded-image" alt="...">
+<div class="container custom-flex" id="port" style="margin-bottom: 40px;">
+  <div class="card card2 text-bg-dark custom-card2" id="crd">
+    <img src="./img-4.jpg" class="card2-img rounded-image" alt="...">
     <div class="card-img-overlay end-container">
       <span class="super mont">Developement</span>
     </div>
   </div>
 
-  <div class="card text-bg-dark custom-card2">
-    <img src="./img-1.jpg" class="card-img rounded-image" alt="...">
+  <div class="card card2 text-bg-dark custom-card2" id="crd">
+    <img src="./img-1.jpg" class="card2-img rounded-image" alt="...">
     <div class="card-img-overlay end-container">
       <span class="super mont">Template</span>
       <span class="super mont">Web Design</span>
     </div>
   </div>
 
-  <div class="card text-bg-dark custom-card2">
-    <img src="./img-2.jpg" class="card-img rounded-image" alt="...">
+  <div class="card card2 text-bg-dark custom-card2" id="crd">
+    <img src="./img-2.jpg" class="card2-img rounded-image" alt="...">
     <div class="card-img-overlay end-container">
       <span class="super mont">Developement</span>
       <span class="super mont">3D Graphics</span>
@@ -368,10 +372,18 @@
   <h2 class="isa-style" style="text-align: center;">Get in <span style="color: #7963e0;">TOUCH</span></h2>
 </div>
 
-<div class="container" style="margin-top: 20px;  margin-bottom: 40px;">
-  <div class="row custom-row">
+<div class="container" style="margin-top: 20px; margin-bottom: 40px;">
+  <div class="row custom-row flex-column-reverse flex-lg-row">
+    <!-- Right Column -->
+    <div class="col-lg-6 order-lg-2 mb-3 mb-lg-0">
+      <div class="mb-3">
+        <textarea class="form-control" style="height: 200px;" id="message" rows="5" placeholder="Message"></textarea>
+      </div>
+      <button type="submit" class="btn btn-get-quote">Submit</button>
+    </div>
+
     <!-- Left Column -->
-    <div class="col-md-6">
+    <div class="col-lg-6 order-lg-1 mb-3 mb-lg-0">
       <div>
         <input type="text" class="form-control" id="fullname" placeholder="Full Name">
       </div>
@@ -388,16 +400,11 @@
         <input type="text" class="form-control" id="subject" placeholder="Subject">
       </div>
     </div>
-    
-    <!-- Right Column -->
-    <div class="col-md-6">
-      <div class="mb-3">
-        <textarea class="form-control" style="height: 200px;" id="message" rows="5" placeholder="Message"></textarea>
-      </div>
-      <button type="submit" class="btn btn-get-quote">Submit</button>
-    </div>
   </div>
 </div>
+
+
+
 </main>
 
 <footer class="footer">
